--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 
     <section>
         <form action="">
-            <input type="text">
+            <label for="nome">CARDHOLDER NAME</label>
+            <input type="text" id="nome">
+            <label for="numero">CARD NUMBER</label>
+            <input type="number" id="numero">
+            <label for="data">EXP. DATE (MM/YY)</label>
+            <input type="number" id="data">
             <input type="number">
-            <input type="number">
-            <input type="number">
-            <input type="number">
+            <label for="codigo">CVC</label>
+            <input type="number" id="codigo">
             <input type="submit">
         </form>
     </section>
