Formatação parcial do formulario

--- a/index.html
+++ b/index.html
@@ -7,25 +7,29 @@
     <title>Cartão de Crédito</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
-
+    <section class="imagem">
         <img src="images/bg-main-desktop.png" alt="">
     </section>
 
-    <section>
-        <form action="">
+    <section class="formul">
+        <form action="" class="formulario">
             <label for="nome">CARDHOLDER NAME</label>
-            <input type="text" id="nome">
+            <input type="text" id="nome" class="dados" placeholder="e.g. Jane Appleaseed">
+
             <label for="numero">CARD NUMBER</label>
-            <input type="number" id="numero">
+            <input type="number" id="numero" class="dados" placeholder="e.g. 1234 5678 9123 0000">
+
             <label for="data">EXP. DATE (MM/YY)</label>
-            <input type="number" id="data">
-            <input type="number">
+            <input type="number" id="data" class="dados" placeholder="MM">
+            <input type="number" class="dados" placeholder="YY">
+
             <label for="codigo">CVC</label>
-            <input type="number" id="codigo">
-            <input type="submit">
+            <input type="number" id="codigo" class="dados" placeholder="e.g. 123">
+
+            <button type="btn" class="enviar">Confirm</button>
         </form>
     </section>
 
