--- a/index.html
+++ b/index.html
@@ -14,23 +14,41 @@
         <img src="images/bg-main-desktop.png" alt="">
     </section>
 
-    <section class="formul">
-        <form action="" class="formulario">
-            <label for="nome">CARDHOLDER NAME</label>
-            <input type="text" id="nome" class="dados" placeholder="e.g. Jane Appleaseed">
+    <section class="areaFormulario">
 
-            <label for="numero">CARD NUMBER</label>
-            <input type="number" id="numero" class="dados" placeholder="e.g. 1234 5678 9123 0000">
+        <form class="formulario">
 
-            <label for="data">EXP. DATE (MM/YY)</label>
-            <input type="number" id="data" class="dados" placeholder="MM">
-            <input type="number" class="dados" placeholder="YY">
+            <div class="campo">
+                <label for="nome">CARDHOLDER NAME</label>
+                <input type="text" id="nome" class="dados" placeholder="e.g. Jane Appleaseed">
+            </div>
 
-            <label for="codigo">CVC</label>
-            <input type="number" id="codigo" class="dados" placeholder="e.g. 123">
+            <div class="campo">
+                <label for="numero">CARD NUMBER</label>
+                <input type="number" id="numero" class="dados" placeholder="e.g. 1234 5678 9123 0000">
+            </div>
 
-            <button type="btn" class="enviar">Confirm</button>
+            <fieldset class="agrupamento">
+            
+                <div class="campo">
+                    <label for="mes">EXP. DATE (MM/YY)</label>
+                    <input type="number" id="mes" class="dados" placeholder="MM">
+                </div>
+                
+                <div class="campo">
+                    <input type="number" id="ano" class="dados" placeholder="YY">
+                </div>
+
+                <div class="campo">
+                    <label for="codigo">CVC</label>
+                    <input type="number" id="codigo" class="dados" placeholder="e.g. 123">
+                </div>
+
+            </fieldset>
+
+            <button type="submit" class="enviar">Confirm</button>
         </form>
+
     </section>
 
 </body>
