--- a/index.html
+++ b/index.html
@@ -5,17 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartão de Crédito</title>
-    <link rel="stylesheet" href="css/reset.css">
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/reset.css"> 
+    
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="imagem">
-        <img src="images/bg-main-desktop.png" alt="">
+       
     </section>
 
     <section class="areaFormulario">
 
+        <form class="row g-3">
+            <div class="col-12">
+              <label for="inputAddress" class="form-label">CARDHOLDER NAME</label>
+              <input type="text" class="form-control" id="inputAddress" placeholder="e.g. Jane Appleaseed">
+            </div>
+            <div class="col-12">
+              <label for="inputAddress2" class="form-label">CARD NUMBER</label>
+              <input type="text" class="form-control" id="inputAddress2" placeholder="e.g. 1234 5678 9123 0000">
+            </div>
+            <div class="col-md-6">
+              <label for="inputCity" class="form-label">EXP. DATE (MM/YY)</label>
+              <input type="text" class="form-control" id="inputCity" placeholder="MM">
+            </div>
+            <div class="col-md-2">
+                <label for="inputZip" class="form-label">..</label>
+                <input type="text" class="form-control" id="inputZip" placeholder="YY">
+              </div>
+            <div class="col-md-4">
+              <label for="inputZip" class="form-label">CVC</label>
+              <input type="text" class="form-control" id="inputZip" placeholder="e.g. 123">
+            </div>
+
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary">Confirm</button>
+            </div>
+          </form>
+
+
+
+        <!--
         <form class="formulario">
 
             <div class="campo">
@@ -48,8 +81,9 @@
 
             <button type="submit" class="enviar">Confirm</button>
         </form>
-
+    -->
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
