--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 </head>
 <body>
     <section class="imagem">
-       
+       <img src="images/bg-card-front.png" id="front" alt="">
+       <img src="images/bg-card-back.png" id="back" alt="">
     </section>
 
     <section class="areaFormulario">
 
-        <form class="row g-3">
+        <form class="row g-1">
             <div class="col-12">
               <label for="inputAddress" class="form-label">CARDHOLDER NAME</label>
               <input type="text" class="form-control" id="inputAddress" placeholder="e.g. Jane Appleaseed">
@@ -30,14 +31,21 @@
             </div>
             <div class="col-md-6">
               <label for="inputCity" class="form-label">EXP. DATE (MM/YY)</label>
-              <input type="text" class="form-control" id="inputCity" placeholder="MM">
             </div>
-            <div class="col-md-2">
-                <label for="inputZip" class="form-label">..</label>
+
+            <div class="col-md-6">
+                <label for="inputZip" class="form-label">CVC</label>
+            </div>
+
+            <div class="col-md-3">
+                <input type="text" class="form-control" id="inputCity" placeholder="MM">
+            </div>
+
+            <div class="col-md-3">
                 <input type="text" class="form-control" id="inputZip" placeholder="YY">
-              </div>
-            <div class="col-md-4">
-              <label for="inputZip" class="form-label">CVC</label>
+            </div>
+
+            <div class="col-md-6">
               <input type="text" class="form-control" id="inputZip" placeholder="e.g. 123">
             </div>
 
@@ -85,5 +93,6 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    
 </body>
 </html>
