--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <form class="row g-1">
             <div class="col-12">
               <label for="inputAddress" class="form-label">CARDHOLDER NAME</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="e.g. Jane Appleaseed">
+              <input type="text" class="form-control" id="inputAddress" placeholder="e.g. Jane Appleaseed" required>
             </div>
             <div class="col-12">
               <label for="inputAddress2" class="form-label">CARD NUMBER</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="e.g. 1234 5678 9123 0000">
+              <input type="text" class="form-control" maxlength="16" id="inputAddress2" placeholder="e.g. 1234 5678 9123 0000" required pattern="[0-9]+$">
             </div>
             <div class="col-md-6">
               <label for="inputCity" class="form-label">EXP. DATE (MM/YY)</label>
@@ -38,15 +38,15 @@
             </div>
 
             <div class="col-md-3">
-                <input type="text" class="form-control" id="inputCity" placeholder="MM">
+                <input type="text" class="form-control" maxlength="2" id="inputCity" placeholder="MM" required>
             </div>
 
             <div class="col-md-3">
-                <input type="text" class="form-control" id="inputZip" placeholder="YY">
+                <input type="text" class="form-control" maxlength="2" id="inputZip" placeholder="YY" required>
             </div>
 
             <div class="col-md-6">
-              <input type="text" class="form-control" id="inputZip" placeholder="e.g. 123">
+              <input type="text" class="form-control" maxlength="3" id="inputZip" placeholder="e.g. 123" required>
             </div>
 
             <div class="col-12">
@@ -54,42 +54,6 @@
             </div>
           </form>
 
-
-
-        <!--
-        <form class="formulario">
-
-            <div class="campo">
-                <label for="nome">CARDHOLDER NAME</label>
-                <input type="text" id="nome" class="dados" placeholder="e.g. Jane Appleaseed">
-            </div>
-
-            <div class="campo">
-                <label for="numero">CARD NUMBER</label>
-                <input type="number" id="numero" class="dados" placeholder="e.g. 1234 5678 9123 0000">
-            </div>
-
-            <fieldset class="agrupamento">
-            
-                <div class="campo">
-                    <label for="mes">EXP. DATE (MM/YY)</label>
-                    <input type="number" id="mes" class="dados" placeholder="MM">
-                </div>
-                
-                <div class="campo">
-                    <input type="number" id="ano" class="dados" placeholder="YY">
-                </div>
-
-                <div class="campo">
-                    <label for="codigo">CVC</label>
-                    <input type="number" id="codigo" class="dados" placeholder="e.g. 123">
-                </div>
-
-            </fieldset>
-
-            <button type="submit" class="enviar">Confirm</button>
-        </form>
-    -->
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
